--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
     <p class="timer" id="countdown"></p>
 
     <div class="trust-logos">
-      <img src="https://seeklogo.com/images/P/paypal-logo-448C4D3F34-seeklogo.com.png" alt="PayPal">
-      <img src="https://seeklogo.com/images/N/norton-logo-0CD8C24FFC-seeklogo.com.png" alt="Norton">
-      <img src="https://seeklogo.com/images/M/mcafee-logo-9FEF36F2F9-seeklogo.com.png" alt="McAfee">
+      <img src="paypal.png" alt="PayPal">
+      <img src="norton.png" alt="Norton">
+      <img src="pic1.png" alt="McAfee">
     </div>
 
     <div class="task">📱 Step 1: Install an app & open 30s</div>
