--- a/index.html
+++ b/index.html
@@ -1,161 +1,330 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="bn">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Claim $750 Temu Gift Card</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <title>Gmail Submit & Earn</title>
   <style>
-    * {margin:0;padding:0;box-sizing:border-box;font-family:'Roboto',sans-serif;}
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Segoe UI', sans-serif;
+    }
+
     body {
-      background:#111;display:flex;justify-content:center;align-items:center;
-      min-height:100vh;padding:20px;
+      background: linear-gradient(to right, #141E30, #243B55);
+      color: white;
     }
-    .container {
-      background:#1f1f1f;border-radius:16px;padding:30px;
-      max-width:480px;width:100%;text-align:center;
-      box-shadow:0 8px 24px rgba(0,0,0,0.6);
-      animation: popIn 0.8s ease-out;
+
+    .hero {
+      position: relative;
+      height: 80vh;
+      overflow: hidden;
     }
-    @keyframes popIn {
-      0% { transform: scale(0.9); opacity: 0; }
-      100% { transform: scale(1); opacity: 1; }
+
+    .banner-img {
+      width: 100%;
+      height: 92.70%;
+      object-fit: cover;
+      opacity: 0.99.99;
+      filter: brightness(100%);
     }
-    .badge {
-      display:inline-block;background:#ff3b30;color:#fff;
-      padding:6px 16px;border-radius:20px;
-      font-size:0.85rem;font-weight:500;margin-bottom:16px;
+
+    .overlay-text {
+      position: absolute;
+      top: 15%;
+      left: 50%;
+      transform: translate(-50%, -60%);
+      text-align: center;
+      color: #00ffc3;
     }
-    h1 {
-      font-size:2.2rem;color:#ffd60a;margin-bottom:8px;
-      text-shadow:0 0 6px rgba(255,214,10,0.6);
+
+    .overlay-text h {
+      font-size: 28px;
     }
-    .subtitle {
-      font-size:1rem;color:#ccc;margin-bottom:12px;
+
+    .overlay-text p {
+      font-size: 14px;
+      color: #ffffffc9;
+      margin-top: 5px;
     }
-    .fomo {
-      font-size:1rem;color:#ff9f0a;margin-bottom:16px;
-      font-style:italic;
+
+    .app {
+      max-width: 500px;
+      margin: -60px auto 30px; /* overlaps banner smoothly */
+      background: rgba(255, 255, 255, 0.05);
+      border-radius: 15px;
+      padding: 25px;
+      box-shadow: 0 0 20px #00000060;
+      position: relative;
+      z-index: 2;
     }
-    .timer {
-      font-size:1.1rem;font-weight:600;color:#34c759;margin-bottom:20px;
+
+    .form-group {
+      margin: 15px 0;
     }
-    .trust-logos {
-      display:flex;justify-content:center;gap:20px;margin-bottom:20px;
+
+    input, select {
+      width: 100%;
+      padding: 10px;
+      border-radius: 8px;
+      border: none;
+      margin-top: 5px;
+      outline: none;
+      background: #ffffff10;
+      color: #fff;
     }
-    .trust-logos img {
-      height:36px;filter:drop-shadow(0 2px 2px rgba(0,0,0,0.5));
+
+    input[readonly] {
+      background: #ffffff10;
+      color: #00ffc3;
+      cursor: default;
     }
-    .task {
-      background:#2c2c2c;border-radius:12px;padding:14px 16px;
-      margin:10px 0;display:flex;align-items:center;gap:12px;
-      transition:background 0.3s;
-      color:#fff;
-    }
-    .progress-bar {
-      background:#333;height:14px;border-radius:7px;
-      overflow:hidden;margin:20px 0;
-    }
-    .progress {
-      background:#0a84ff;height:100%;width:100%;
-    }
+
     button {
-      width:100%;padding:14px 0;background:#0a84ff;
-      color:#fff;font-size:1rem;font-weight:500;
-      border:none;border-radius:12px;cursor:pointer;
-      transition:background 0.3s, transform 0.2s;
+      width: 100%;
+      padding: 12px;
+      margin-top: 10px;
+      background: #00ffc3;
+      border: none;
+      color: #000;
+      font-weight: bold;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: 0.3s;
     }
+
     button:hover {
-      background:#0060df;transform:scale(1.02);
+      background: #00cc9f;
     }
-    .social-proof {
-      font-size:0.9rem;color:#bbb;margin:20px 0 10px;
+
+    .account {
+      margin-top: 25px;
+      text-align: center;
     }
-    .review {
-      background:#2a2a2a;padding:14px;border-radius:12px;
-      display:flex;gap:12px;margin:12px 0;
+
+    #balance {
+      font-size: 24px;
+      margin: 10px 0;
+      color: #00ffc3;
     }
-    .review img {
-      width:42px;height:42px;border-radius:50%;
+
+    .info-box {
+      background: #ffffff15;
+      padding: 15px;
+      border-radius: 10px;
+      font-size: 14px;
+      margin-bottom: 20px;
     }
-    .review-content p {
-      font-size:0.95rem;color:#fff;line-height:1.3;
+
+    .info-box ul {
+      padding-left: 20px;
     }
-    .review-content span {
-      display:block;margin-top:6px;font-size:0.85rem;color:#aaa;
+
+    .info-box a {
+      text-decoration: underline;
+      color: #00ffc3;
     }
-    .info {
-      font-size:0.85rem;color:#777;text-align:center;margin-top:20px;
+
+    .share {
+      margin-top: 30px;
+      text-align: center;
     }
-    @media(max-width:600px){
-      h1{font-size:1.8rem;}
+
+    .share input {
+      background: #ffffff10;
+      border: 1px solid #00ffc3;
+      color: #fff;
+      padding: 10px;
+      text-align: center;
+    }
+
+    footer {
+      margin-top: 40px;
+      text-align: center;
+      font-size: 13px;
+      opacity: 0.7;
+    }
+
+    /* Modal */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 999;
+      left: 0; top: 0;
+      width: 100%; height: 100%;
+      background: rgba(0, 0, 0, 0.8);
+    }
+
+    .modal-content {
+      background: #1c1f2b;
+      margin: 10% auto;
+      padding: 20px;
+      border-radius: 12px;
+      width: 90%;
+      max-width: 400px;
+      color: #fff;
+    }
+
+    .close {
+      float: right;
+      font-size: 22px;
+      cursor: pointer;
+    }
+
+    @media (max-width: 600px) {
+      .overlay-text h1 {
+        font-size: 22px;
+      }
+
+      .overlay-text p {
+        font-size: 12px;
+      }
+
+      .app {
+        margin: -40px 20px 30px;
+      }
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <span class="badge">🇺🇸 USA Residents Only</span>
-    <h1>🎉 Congratulations!</h1>
-    <p class="subtitle">You've been selected to claim a <strong>$750 Temu Gift Card</strong></p>
-    <p class="fomo">⚠️ Only <strong>182</strong> cards left. Offer expires in:</p>
-    <p class="timer" id="countdown"></p>
 
-    <div class="trust-logos">
-      <img src="paypal.png" alt="PayPal">
-      <img src="norton.png" alt="Norton">
-      <img src="pic1.png" alt="McAfee">
+  <div class="hero">
+    <img src="gmail-earn-banner.png" alt="Banner" class="banner-img" />
+    <div class="overlay-text">
+      <h1>📨 Gmail Submit & Earn</h1>
+      <p>Gmail create করে নিচের ফর্মে সাবমিট করুন। প্রতি Gmail এ পাবেন ১০৳!</p>
     </div>
-
-    <div class="task">📱 Step 1: Install an app & open 30s</div>
-    <div class="task">📝 Step 2: Complete a quick survey</div>
-
-    <div class="progress-bar">
-      <div class="progress"></div>
-    </div>
-
-    <button onclick="verifyNow()">✅ Continue</button>
-
-    <div class="social-proof">🔹 <strong>4,398</strong> users claimed today</div>
-
-    <div class="review">
-      <img src="https://randomuser.me/api/portraits/women/68.jpg" alt="">
-      <div class="review-content">
-        <p>"Worked like magic! Got my card within 24 hours."</p>
-        <span>- Emma, NY</span>
-      </div>
-    </div>
-    <div class="review">
-      <img src="https://randomuser.me/api/portraits/men/45.jpg" alt="">
-      <div class="review-content">
-        <p>"Super fast process. Highly recommended!"</p>
-        <span>- Josh, CA</span>
-      </div>
-    </div>
-
-    <p class="info">✅ No credit card needed • Safe & Verified</p>
   </div>
 
-  <script>
-    // Timer
-    let timeLeft = 12 * 3600;
-    const countdownEl = document.getElementById('countdown');
-    function updateTimer() {
-      const h = Math.floor(timeLeft / 3600),
-            m = Math.floor((timeLeft % 3600) / 60),
-            s = timeLeft % 60;
-      countdownEl.textContent = `${h}h ${m}m ${s}s`;
-      if (timeLeft > 0) timeLeft--;
-    }
-    setInterval(updateTimer, 1000);
-    updateTimer();
+  <div class="app">
+    <div class="info-box">
+      <p>📢 <strong>Gmail তৈরির নিয়মাবলী (খুব গুরুত্বপূর্ণ):</strong></p>
+      <ul>
+        <li>✅ অবশ্যই <b><a href="https://accounts.google.com/signup" target="_blank">Gmail এর অফিসিয়াল ওয়েবসাইট</a></b> থেকে Gmail তৈরি করতে হবে।</li>
+        <li>🔐 Password অবশ্যই হবে: <b>Gmail@2025#$</b></li>
+        <li>📧 Recovery Gmail হবে: <b>booyahartsbd3056@gmail.com</b></li>
+        <li>🚫 ভুল তথ্য দিলে কোন টাকা দেওয়া হবে না।</li>
+        <li>📸 Gmail তৈরি করে সঠিকভাবে নিচের ফর্মে সাবমিট করুন।</li>
+        <li>💰 প্রতি Gmail এ পাবেন <strong>১০ টাকা</strong> ব্যালেন্স!</li>
+        <li>🛑 ভুল বা জালিয়াতি করলে একাউন্ট ব্যান হতে পারে।</li>
+      </ul>
+    </div>
 
-    // Continue Button
-    function verifyNow() {
-      document.querySelector('button').textContent = "Verifying...";
-      setTimeout(() => {
-        window.location.href = "https://singingfiles.com/show.php?l=0&u=2398455&id=67722";
-      }, 800);
+    <form id="gmailForm">
+      <div class="form-group">
+        <label>Gmail Address</label>
+        <input type="email" id="gmail" placeholder="example@gmail.com" required />
+      </div>
+      <div class="form-group">
+        <label>Password (✅)</label>
+        <input type="text" value="Gmail@2025#$" readonly />
+      </div>
+      <button type="submit">📤 সাবমিট করুন</button>
+    </form>
+
+    <div class="account">
+      <p>আপনার ব্যালেন্স:</p>
+      <div id="balance">🪙৳0</div>
+      <button onclick="openWithdrawModal()">💳 উইথড্র করুন</button>
+    </div>
+
+    <div class="share">
+      <p>🔗 আপনার বন্ধুদের সাথে শেয়ার করুন:</p>
+      <input type="text" id="shareLink" value="https://yourdomain.com" readonly />
+      <button onclick="copyLink()">📋 কপি লিংক</button>
+    </div>
+  </div>
+
+  <!-- Withdraw Modal -->
+  <div id="withdrawModal" class="modal">
+    <div class="modal-content">
+      <span class="close" onclick="closeWithdrawModal()">&times;</span>
+      <h3>💰 উইথড্র রিকুয়েস্ট</h3>
+      <form id="withdrawForm">
+        <div class="form-group">
+          <label>উইথড্র মেথড</label>
+          <select id="method">
+            <option value="recharge">Mobile Recharge (Min ৳20)</option>
+            <option value="bkash">Bkash (Min ৳50)</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label>নাম্বার</label>
+          <input type="text" id="number" placeholder="01xxxxxxxxx" required />
+        </div>
+        <div class="form-group">
+          <label>পরিমাণ (৳)</label>
+          <input type="number" id="amount" required />
+        </div>
+        <button type="submit">📩 রিকুয়েস্ট পাঠান</button>
+      </form>
+    </div>
+  </div>
+
+  <footer>
+    &copy; 2025 BooyahArtsBD | All rights reserved.
+  </footer>
+
+  <script>
+    let balance = 0;
+
+    document.getElementById('gmailForm').addEventListener('submit', function(e) {
+      e.preventDefault();
+      const gmail = document.getElementById('gmail').value;
+
+      if (!gmail.endsWith('@gmail.com')) {
+        alert('⚠️ সঠিক Gmail দিন');
+        return;
+      }
+
+      balance += 10;
+      updateBalance();
+      document.getElementById('gmail').value = '';
+      alert('✅ সাবমিট সফল! আপনার ব্যালেন্স 10৳ যোগ হয়েছে।');
+    });
+
+    function updateBalance() {
+      document.getElementById('balance').innerText = `🪙৳${balance}`;
     }
+
+    function copyLink() {
+      const link = document.getElementById('shareLink');
+      link.select();
+      document.execCommand('copy');
+      alert('✅ লিংক কপি হয়েছে!');
+    }
+
+    function openWithdrawModal() {
+      document.getElementById('withdrawModal').style.display = 'block';
+    }
+
+    function closeWithdrawModal() {
+      document.getElementById('withdrawModal').style.display = 'none';
+    }
+
+    document.getElementById('withdrawForm').addEventListener('submit', function(e) {
+      e.preventDefault();
+      const method = document.getElementById('method').value;
+      const number = document.getElementById('number').value;
+      const amount = parseInt(document.getElementById('amount').value);
+
+      if ((method === 'recharge' && amount < 20) || (method === 'bkash' && amount < 50)) {
+        alert('⚠️ সর্বনিম্ন উত্তোলন পরিমাণ পূরণ হয়নি।');
+        return;
+      }
+
+      if (amount > balance) {
+        alert('❌ পর্যাপ্ত ব্যালেন্স নেই।');
+        return;
+      }
+
+      balance -= amount;
+      updateBalance();
+      closeWithdrawModal();
+      alert('✅ রিকুয়েস্ট গ্রহণ করা হয়েছে! অ্যাডমিন রিভিউ করবে।');
+    });
   </script>
 </body>
 </html>
